--- a/bedrock/firefox/templates/firefox/desktop/customize.html
+++ b/bedrock/firefox/templates/firefox/desktop/customize.html
@@ -16,7 +16,7 @@
 {% block body_id %}firefox-desktop-customize{% endblock %}
 
 {% block site_header_unwrapped %}
-  {{ fxfamilynav('desktop', 'customize', 'dark') }}
+  {{ fxfamilynav('desktop', 'dark') }}
 {% endblock %}
 
 {% block content %}
