--- a/bedrock/firefox/templates/firefox/desktop/fast.html
+++ b/bedrock/firefox/templates/firefox/desktop/fast.html
@@ -16,7 +16,7 @@
 {% block body_id %}firefox-desktop-fast{% endblock %}
 
 {% block site_header_unwrapped %}
-  {{ fxfamilynav('desktop', 'fast', 'dark') }}
+  {{ fxfamilynav('desktop', 'dark') }}
 {% endblock %}
 
 {% block content %}
