--- a/bedrock/firefox/templates/firefox/desktop/trust.html
+++ b/bedrock/firefox/templates/firefox/desktop/trust.html
@@ -16,7 +16,7 @@
 {% block body_id %}firefox-desktop-trust{% endblock %}
 
 {% block site_header_unwrapped %}
-  {{ fxfamilynav('desktop', 'trust', 'dark') }}
+  {{ fxfamilynav('desktop', 'dark') }}
 {% endblock %}
 
 {% block content %}
