--- a/bedrock/firefox/templates/firefox/interest-dashboard.html
+++ b/bedrock/firefox/templates/firefox/interest-dashboard.html
@@ -20,7 +20,7 @@
 {% block site_header %}{% endblock %}
 
 {% block site_header_unwrapped %}
-  {{ fxfamilynav('desktop', '', 'dark') }}
+  {{ fxfamilynav('desktop', 'dark') }}
 {% endblock %}
 
 {# The contents of the dashboard_intro block appears at the top of the page
