--- a/bedrock/firefox/templates/firefox/ios.html
+++ b/bedrock/firefox/templates/firefox/ios.html
@@ -23,14 +23,14 @@
 {% endblock %}
 
 {% block site_header %}
-    {% call fxfamilynav('ios', 'index') %}
-      <div class="{% if has_widget %}show-widget{% endif %}">
-        <a class="dl-button" rel="external" href="{{ firefox_ios_url('mozorg-ios_page-appstore-button') }}" data-link-type="download" data-download-os="iOS">
-          <img src="{{ l10n_img('firefox/ios/btn-app-store.svg') }}" alt="{{ _('Download on the App Store') }}">
-        </a>
-        <button class="send-to button-flat-dark" type="button" data-button-name="Get Firefox for iOS">{{ _('Get Firefox for iOS') }}</button>
-      </div>
-    {% endcall %}
+  {% call fxfamilynav('ios') %}
+    <div class="{% if has_widget %}show-widget{% endif %}">
+      <a class="dl-button" rel="external" href="{{ firefox_ios_url('mozorg-ios_page-appstore-button') }}" data-link-type="download" data-download-os="iOS">
+        <img src="{{ l10n_img('firefox/ios/btn-app-store.svg') }}" alt="{{ _('Download on the App Store') }}">
+      </a>
+      <button class="send-to button-flat-dark" type="button" data-button-name="Get Firefox for iOS">{{ _('Get Firefox for iOS') }}</button>
+    </div>
+  {% endcall %}
 {% endblock %}
 
 {% set has_widget = LANG in settings.SEND_TO_DEVICE_LOCALES %}
