--- a/media/css/firefox/android.less
+++ b/media/css/firefox/android.less
@@ -66,6 +66,7 @@
     padding: 7px (@baseLine / 2);
     .font-size(@smallFontSize);
     color: #fff;
+    margin-bottom: 0;
     text-align: center;
 }
 
