--- a/media/css/firefox/hello/index.less
+++ b/media/css/firefox/hello/index.less
@@ -83,6 +83,7 @@ h1, h2, h3, h4, h5, h6 {
         .font-size(@smallFontSize);
         padding: 12px (@baseLine / 2);
         background: #005189;
+        margin-bottom: 0;
         text-transform: none;
 
         &:hover,
