--- a/media/css/firefox/ios.less
+++ b/media/css/firefox/ios.less
@@ -662,6 +662,7 @@ a.go {
     padding: 7px (@baseLine / 2);
     .font-size(@smallFontSize);
     color: #fff;
+    margin: 0;
     text-align: center;
 }
 
@@ -785,10 +786,4 @@ html[lang=ja] {
     #privacy ul p {
         text-align: left;
     }
-}
-// Bug 1231732
-html[lang|="en"] {
-  .fxfamilynav-cta-wrapper .send-to {
-      margin-top: 10px;
-  }
 }
