--- a/bedrock/firefox/templates/firefox/os/mwc-2015-preview.html
+++ b/bedrock/firefox/templates/firefox/os/mwc-2015-preview.html
@@ -23,7 +23,7 @@
 {% block site_header %}{% endblock %}
 
 {% block site_header_unwrapped %}
-  {{ fxfamilynav('os', '') }}
+  {{ fxfamilynav('os') }}
 {% endblock %}
 
 {% block content %}
