--- a/bedrock/firefox/templates/firefox/private-browsing.html
+++ b/bedrock/firefox/templates/firefox/private-browsing.html
@@ -19,7 +19,7 @@
 {% block site_header %}{% endblock %}
 
 {% block site_header_unwrapped %}
-  {{ fxfamilynav('desktop', 'private-browsing') }}
+  {{ fxfamilynav('features') }}
 {% endblock %}
 
 {% block content %}
