--- a/bedrock/firefox/templates/firefox/sync.html
+++ b/bedrock/firefox/templates/firefox/sync.html
@@ -23,7 +23,7 @@
 {% block site_header %}{% endblock %}
 
 {% block site_header_unwrapped %}
-  {{ fxfamilynav('desktop', 'sync', 'dark') }}
+  {{ fxfamilynav('features', 'dark') }}
 {% endblock %}
 
 {% block optimizely %}
