--- a/bedrock/mozorg/templates/mozorg/about/patents/license-1.0.html
+++ b/bedrock/mozorg/templates/mozorg/about/patents/license-1.0.html
@@ -4,7 +4,7 @@
 
 {% extends "mozorg/about-base.html" %}
 
-{% block page_title %}{{ _('Mozilla Open Software Patent License Agreement v1.1') }}{% endblock %}
+{% block page_title %}{{ _('Mozilla Open Software Patent License Agreement v1.0') }}{% endblock %}
 {% block body_id %}about-patents{% endblock %}
 {% block body_class %}sand about-patents{% endblock %}
 
@@ -20,13 +20,13 @@
 {% block article %}
 <h1 class="title-shadow-box">{{ _('Open Innovation and Software Patents') }}</h1>
 <section>
-  <h2>{{ _('Mozilla Open Software Patent License Agreement v1.1') }}</h2>
+  <h2>{{ _('Mozilla Open Software Patent License Agreement v1.0') }}</h2>
   <p>{{ _('This Open Software Patent License Agreement (“<strong>Agreement</strong>”) is made between you and the Licensor identified below.  For purposes of this Agreement, you means you and your Affiliates, and Licensor means the Mozilla Corporation, Mozilla Foundation and any of their Affiliates.') }}</p>
   <ol>
     <li><strong>{{ _('Definitions') }}</strong>
       <ol type="a">
         <li id="affiliate"><strong>{{ _('“Affiliate”') }} </strong>{{ _('means any entity owned or controlled by you or Licensor, as applicable, either now or in the future.') }}</li>
-        <li id="licensor_patents"><strong>{{ _('“Licensor Patents”')}} </strong>{{ _('means all Patents owned, or licensable as described in this Agreement, at any time during the License Term, by Licensor.') }}</li>
+        <li id="mozilla_patents"><strong>{{ _('“Mozilla Patents”')}} </strong>{{ _('means all Patents owned, or licensable as described in this Agreement, at any time during the License Term, by Licensor.') }}</li>
         <li id="open_patent_licensing"><strong>{{ _('“Open Patent Licensing”') }} </strong>{{ _('means royalty-free and non-discriminatory licensing or cross-licensing arrangements such as open source licenses or open standards licensing.') }}</li>
         <li id="open_source_software"><strong>{{ _('“Open Source Software”') }} </strong>{{ _('means Software that is made generally publicly available under an open source license, which means a license meeting the Open Source Definition as published by the Open Source Initiative.  For clarity, Software that is made available under multiple licenses will be considered Open Source Software only to the extent it is used under an open source license.') }}</li>
         <li id="participant">{{ _('A ') }}<strong>{{ _('“Participant”') }} </strong>{{ _('means any party that is bound to any version of this Agreement, including you.') }}</li>
@@ -40,7 +40,7 @@
       <ol type="a">
         <li>{{ _('Subject to Section 3(b), Licensor, on behalf of itself and each of its Affiliates, hereby grants to you and your Affiliates a royalty-free, fully-paid-up, worldwide, non-exclusive, non-transferable license under Licensor Patents to make, have made, use, sell, offer for sale, import, and otherwise exploit any Software and practice any method embodied in Software.') }}</li>
         <li>{{ _('In consideration for the rights granted hereunder in Section 3(a), you agree to grant, upon request and upon reasonable, non-discriminatory and royalty free terms and conditions, to Licensor and any Participant a royalty-free, fully-paid-up, worldwide, non-exclusive, non-transferable license under your Patents to make, have made, use, sell, offer for sale, import, and otherwise exploit any Open Source Software and practice any method embodied in Open Source Software.  As used in this paragraph, “reasonable” means, without limitation, that such terms must not place any restrictions on the practice of your Patents that would prohibit use, modification and redistribution of the applicable software under the terms of Open Source Licenses.  By way of example and not limitation, such terms must not restrict the field of use of the Software, or prohibit modification of the Software.') }}</li>
-        <li>{{ _('Licensor or others may license Patents to you under other terms, such as Open Patent Licensing efforts, and any other such  license granted to you will not limit your rights under this Agreement.') }}</li>
+        <li>{{ _('Mozilla or others may license Patents to you under other terms, such as Open Patent Licensing efforts, and any other such  license granted to you will not limit your rights under this License.') }}</li>
         <li>{{ _('During the License Term, you may transfer your rights, licenses and obligations under this Agreement in connection with a merger, acquisition, or sale of all or substantially all of your assets related to this Agreement, to a party that (1) expresses in writing  its intention to be bound (sufficient to meet the conditions of Section 2), and (2) has not asserted Claims as described in Section 4 prior to the date of transfer.') }}</li>
         <li>{{ _('You acknowledge that this Agreement does not reflect a royalty that might otherwise have been negotiated at arms’ length for any Patent, and that this  Agreement is not intended to affect any determination of whether infringement of any Patent may be adequately compensated by money damages.') }}</li>
         <li>{{ _('Each Participant is an intended third party beneficiary of this Agreement.') }}</li>
@@ -48,13 +48,13 @@
     </li>
     <li><strong>{{ _('Termination') }}</strong>
       <ol type="a">
-        <li>{{ _('If you bring a Claim, the licenses granted to you by Licensor and all other Participants will immediately terminate as of the date you bring such Claim.  For purposes of the foregoing, a “Claim” means (a) filing any lawsuit or other legal action (including any action to enjoin import of products) asserting infringement of your Patent by Software, (b) making any written claims of infringement of any of your Patents by Software, including requests to cease and desist infringement, or (c) assisting any third party to bring any such claim.  However, “Claims” will not include (x) claims of patent infringement brought by you as counter-claims or cross-claims in any third party claim of patent infringement against you; (y) invitations or offers by you to license Patents in connection with Open Patent Licensing; or (z) claims brought by you to enforce the terms of this Agreement or any related Open Patent Licensing (including intervention in a third party claim of patent infringement against another Participant).') }}</li>
-        <li>{{ _('You may terminate the License Term by making a public statement of your intention to no longer be party to this Agreement, stating a date of termination of the License Term no earlier than the date of such statement, and stating in good faith that to your knowledge, you will not infringe any Licensor Patent as of the end of the License Term.  In such case, the licenses granted to you by all Participants will terminate effective as of the end of the License Term, and your licenses under Section 3(b) will also terminate as of the end of the License Term.') }}</li>
+        <li>{{ _('If you bring a Claim, the licenses granted to you by Mozilla and all other Participants will immediately terminate as of the date you bring such Claim.  For purposes of the foregoing, a “Claim” means (a) filing any lawsuit or other legal action (including any action to enjoin import of products) asserting infringement of your Patent by Software, (b) making any written claims of infringement of any of your Patents by Software, including requests to cease and desist infringement, or (c) assisting any third party to bring any such claim.  However, “Claims” will not include (x) claims of patent infringement brought by you as counter-claims or cross-claims in any third party claim of patent infringement against you; or (y) invitations or offers to license Patents in connection with Open Patent Licensing.') }}</li>
+        <li>{{ _('You may terminate the License Term by making a public statement of your intention to no longer be party to this Agreement, stating a date of termination of the License Term no earlier than the date of such statement, and stating in good faith that to your knowledge, you will not infringe any Mozilla Patent as of the end of the License Term.  In such case, the licenses granted to you by all Participants will terminate effective as of the end of the License Term, and your licenses under Section 3(b) will also terminate as of the end of the License Term.') }}</li>
       </ol>
     </li>
     <li><strong>{{ _('General') }}</strong>
       <ol type="a">
-        <li>{{ _('This is the entire agreement between Licensor and you on the subject matter of this Agreement.  In the event that any term or condition contained in this Agreement shall be determined by any court of competent jurisdiction to be unenforceable by reason of its extending for too great a period of time or over too great a geographical area or by reason of its being too extensive in any other respect, it shall be interpreted to extend only over the maximum period of time for which it may be enforceable and/or over the maximum geographical area as to which it may be enforceable and/or to the maximum extent in all other respects as to which it may be enforceable, all as determined by such court in such action.') }}</li>
+        <li>{{ _('This is the entire agreement between Mozilla and you on the subject matter of this Agreement.  In the event that any term or condition contained in this Agreement shall be determined by any court of competent jurisdiction to be unenforceable by reason of its extending for too great a period of time or over too great a geographical area or by reason of its being too extensive in any other respect, it shall be interpreted to extend only over the maximum period of time for which it may be enforceable and/or over the maximum geographical area as to which it may be enforceable and/or to the maximum extent in all other respects as to which it may be enforceable, all as determined by such court in such action.') }}</li>
         <li>{{ _('The text of this Agreement is provided to you under the ') }}<a rel="external" href="http://creativecommons.org/publicdomain/zero/1.0/">{{ _('CC0 1.0 Universal Waiver') }}</a>.</li>
         <li>{{ _('Any law or regulation which provides that the language of a contract shall be construed against the drafter will not be used to construe the terms of this Agreement against any Participant.') }}</li>
       </ol>
@@ -62,15 +62,6 @@
   </ol>
   <p>{{ _('If you would like to show your intention to be bound by this Agreement, you may wish to make the following statement:  “ZXQ, Inc. hereby states that it intends to be bound by the Mozilla Open Software Patent License Agreement for Mozilla, version ____, as of [date].”') }}
   </p>
-  <p>{{ _('If you would like to use the text of this agreement for your own patent licensing, you may feel free to do so.  However, to avoid confusion please remove all references to “Mozilla” from your version of the agreement.  You may wish to say that your agreement is “based on the Mozilla Open Software Patent License Agreement v1.1,” for informational purposes, but you are not required to do so.') }}</p>
+  <p>{{ _('If you would like to use the text of this agreement for your own patent licensing, you may feel free to do so.  However, to avoid confusion please remove all references to “Mozilla” from your version of the agreement.  You may wish to say that your agreement is “based on the Mozilla Open Software Patent License Agreement,” for informational purposes, but you are not required to do so.') }}</p>
 </section>
-{% endblock %}
-
-{% block sidebar_extra %}
-  <div class="reference">
-    <h4>{{ _('Historical Documents') }}</h4>
-    <ul>
-      <li><a href="{{ url('mozorg.about.patents.license-1.0') }}">{{ _('Mozilla Open Software Patent License Agreement v1.0') }}</a></li>
-    </ul>
-  </div>
 {% endblock %}
