Fix Bug 1256286 - Update Firefox OS devices page Mar. 31, 2016

--- a/media/css/firefox/os/devices.less
+++ b/media/css/firefox/os/devices.less
@@ -527,10 +527,16 @@ html[lang^="en"] #purchase-device-sticky {
         strong {
             display: block;
             .font-size(22px);
-            line-height: 16px;
+            line-height: 1.2;
             margin-bottom: 6px;
             font-weight: normal;
             color: @textColorPrimary;
+        }
+
+        li {
+            background: none;
+            margin: 0 0 6px;
+            padding: 0;
         }
     }
 
