--- a/bedrock/firefox/templates/firefox/os/devices.html
+++ b/bedrock/firefox/templates/firefox/os/devices.html
@@ -2738,6 +2738,12 @@
               <span class="device-name">{{ _('Panasonic CX700') }}</span>
             </a>
           </li>
+          <li>
+            <a href="#panasonic_dx900" class="device-thumbnail">
+              <img src="{{ static('img/firefox/os/devices/tvs/panasonic-dx900-thumb.png') }}" alt="">
+              <span class="device-name">{{ _('Panasonic DX900') }}</span>
+            </a>
+          </li>
         </ul>
       </div>
 
@@ -2764,9 +2770,10 @@
                   <ul>
                     <li class="stat-general">
                       <strong>{{ _('Picture Quality') }}</strong>
-                      {{ _('4K ULTRA HD TV') }}
-                      <br>
-                      {{ _('3840 x 2160p') }}
+                      <ul>
+                        <li>{{ _('4K ULTRA HD TV') }}</li>
+                        <li>{{ _('3840 x 2160p') }}</li>
+                      </ul>
                     </li>
                     <li class="stat-general">
                       <strong>{{ _('Web Browser') }}</strong>
@@ -2784,6 +2791,66 @@
             </div>{#--/.pager-content--#}
           </div>{#--/.container--#}
         </section>{#--/#panasonic_cx700--#}
+
+        <section class="device-detail smartphone-detail" id="panasonic_dx900">
+          <div id="panasonic_dx900-pager" class="container pager pager-with-tabs pager-no-history">
+            <header class="device-detail-header">
+              <h3 class="device-title">{{ _('Panasonic DX900') }}</h3>
+
+              <ul class="pager-tabs">
+                <li><a href="#p1" data-label="Features">{{_('Features')}}</a></li>
+              </ul>
+
+              <button class="device-detail-close">{{ _('Close') }}</button>
+            </header>
+
+            <div class="pager-content">
+              <div class="device-details features pager-page default-page" id="panasonic_dx900-features">
+                <div class="feature-group image wide">
+                  <img src="{{ static('img/firefox/os/devices/tvs/panasonic-dx900.png') }}" alt="{{ _('Panasonic DX900') }}">
+                </div>
+
+                <div class="feature-group stats">
+                  <ul>
+                    <li class="stat-general">
+                      <strong>{{ _('Picture Quality') }}</strong>
+                      <ul>
+                        <li>{{ _('4K ULTRA HD TV') }}</li>
+                        <li>{{ _('3840 x 2160p') }}</li>
+                      </ul>
+                    </li>
+                    <li class="stat-general">
+                      <strong>{{ _('Web Browser') }}</strong>
+                      {{ _('Firefox') }}
+                    </li>
+                    <li class="stat-general">
+                      <strong>{{ _('Web Apps Discovery Portal') }}</strong>
+                      {{ _('Web Apps') }}
+                    </li>
+                    <li class="stat-general">
+                      <strong>{{ _('Features') }}</strong>
+                      <ul>
+                        <li>{{ _('Pin to Home') }}</li>
+                        <li>{{ _('Send to TV') }}</li>
+                        <li>{{ _('Firefox Account sync (bookmark/history)') }}</li>
+                      </ul>
+                    </li>
+                    <li class="stat-general">
+                      <strong>{{ _('Models Powered by Firefox OS') }}</strong>
+                      {{ _('Full DX series') }}
+                    </li>
+                  </ul>
+                </div>
+
+                <div class="feature-group availability">
+                  <p>
+                    <a rel="external" class="button arrow-link" href="http://www.panasonic.com/global/home.html">{{ _('Learn more') }}</a>
+                  </p>
+                </div>
+              </div>{#--/.features--#}
+            </div>{#--/.pager-content--#}
+          </div>{#--/.container--#}
+        </section>{#--/#panasonic_dx900--#}
       </div>{#--/.device-detail-list--#}
     </section>{#--/#tvs--#}
 
