[fix bug 1260807] Remove references to Firefox OS

--- a/bedrock/foundation/templates/foundation/index.html
+++ b/bedrock/foundation/templates/foundation/index.html
@@ -28,7 +28,6 @@
   <p>
     {% trans
       firefox=url('firefox.new'),
-      firefox_os=url('firefox.os.index')
     %}
       To keep the Web accessible, we build products that create
       opportunity and inspire further innovation. Many of Mozilla’s
@@ -36,16 +35,15 @@
       subsidiary of the Mozilla Foundation. The Mozilla Corporation
       functions as a self-sustaining social enterprise — money earned
       through its products is reinvested into the organization. Products
-      include our flagship <a href="{{ firefox }}">Firefox browser</a>,
-      <a href="{{ firefox_os }}">Firefox OS</a>, and other open source
-      tools. The Mozilla Corporation also partners with like-minded allies
-      to bring an open source ethos to industries and technologies like
-      online video, telecommunications and virtual reality.
+      include our flagship <a href="{{ firefox }}">Firefox browser</a> and
+      other open source tools. The Mozilla Corporation also partners with
+      like-minded allies to bring an open source ethos to industries and
+      technologies like online video, telecommunications and virtual reality.
     {% endtrans %}
   </p>
 
   <p>
-    {% trans 
+    {% trans
       hive="https://hivelearningnetworks.org/",
       clubs="https://teach.mozilla.org/clubs/",
       parties="https://teach.mozilla.org/events/",
@@ -65,10 +63,10 @@
       communities in cities around the world, and
       <a href="{{ clubs }}">Mozilla Clubs</a> and
       <a href="{{ parties }}">Maker Parties</a> teach web literacy through
-      hands-on and peer-to-peer learning. Our educational tools like the 
+      hands-on and peer-to-peer learning. Our educational tools like the
       <a href="{{ thimble }}">Thimble code editor</a> and
       <a href="{{ webmaker}}">Webmaker for Android</a> transform individuals
-      from Web consumers into Web creators. And our leadership pipelines — 
+      from Web consumers into Web creators. And our leadership pipelines —
       the <a href="{{ open_news }}">OpenNews</a>,
       <a href="{{open_web}}">Open Web</a> and
       <a href="{{ science }}">Mozilla Science</a> fellowship programs, and
