--- a/bedrock/mozorg/templates/mozorg/contribute/signup.html
+++ b/bedrock/mozorg/templates/mozorg/contribute/signup.html
@@ -178,7 +178,7 @@
 
       <div class="info-content" id="info-coding">
         <h3>{{ _('Coding') }}</h3>
-        <p>{{ _('Contribute code to a whole range of Mozilla products, including Firefox and Firefox OS.') }}</p>
+        <p>{{ _('Contribute code to a whole range of Mozilla products, including Firefox.') }}</p>
       </div>
 
       <div class="info-content" id="info-testing">
@@ -203,7 +203,7 @@
 
       <div class="info-content" id="info-translating">
         <h3>{{ _('Translating') }}</h3>
-        <p>{{ _('Help make Mozilla stuff available in other languages. Translate everything from newsletters and websites to copy for Firefox and Firefox OS.') }}</p>
+        <p>{{ _('Help make Mozilla stuff available in other languages. Translate everything from newsletters and websites to copy for Firefox.') }}</p>
       </div>
 
       <div class="info-content" id="info-activism">
