--- a/bedrock/mozorg/templates/mozorg/contact/contact-landing.html
+++ b/bedrock/mozorg/templates/mozorg/contact/contact-landing.html
@@ -28,7 +28,7 @@
       <p>
       {% trans link_sumo='https://support.mozilla.org' %}
         To reach Mozilla anywhere in the world, check out the locations above. For help
-        with any of our products, including Firefox for desktop and Android, Firefox OS
+        with any of our products, including Firefox (for desktop, Android and iOS), Firefox OS
         and Thunderbird, please <a href="{{ link_sumo }}">visit our support site</a>.
       {% endtrans %}
       </p>
