--- a/bedrock/styleguide/templates/styleguide/communications/copy-rules.html
+++ b/bedrock/styleguide/templates/styleguide/communications/copy-rules.html
@@ -14,12 +14,12 @@
 {% block content_area %}
 <section id="intro">
   <h2>Introduction</h2>
-  <p>These guidelines are for website content, campaigns and other 
-  communications intended for a general audience. If you’re looking for 
-  documentation guidelines, please visit the 
-  <a href="https://developer.mozilla.org/en-US/docs/Project:MDC_style_guide">MDN Style Guide</a> 
-  at the Mozilla Developer Network. If you’re looking for information about 
-  writing support articles, please see <a href="https://support.mozilla.org/kb/how-to-write-knowledge-base-articles">“How to write Knowledge Base articles”</a> 
+  <p>These guidelines are for website content, campaigns and other
+  communications intended for a general audience. If you’re looking for
+  documentation guidelines, please visit the
+  <a href="https://developer.mozilla.org/en-US/docs/Project:MDC_style_guide">MDN Style Guide</a>
+  at the Mozilla Developer Network. If you’re looking for information about
+  writing support articles, please see <a href="https://support.mozilla.org/kb/how-to-write-knowledge-base-articles">“How to write Knowledge Base articles”</a>
   at Mozilla Support.</p>
 </section>
 
@@ -63,7 +63,7 @@
     <dt id="firefox-beta-for-mobile">Firefox Beta for mobile</dt>
     <dd>“Beta for mobile” is also acceptable, but never “mobile Beta;” mobile is always lowercase</dd>
     <dt id="firefox-browser">Firefox browser</dt>
-    <dd>use this to differentiate from the Firefox family of products or from another specific Firefox product (Firefox Marketplace, Firefox OS, etc.); browser is always lowercase</dd>
+    <dd>use this to differentiate from the Firefox family of products or from another specific Firefox product (Firefox Marketplace, Firefox Hello, etc.); browser is always lowercase</dd>
     <dt id="firefox-developer-edition">Firefox Developer Edition</dt>
     <dd>Firefox Developer Edition on first mention, Developer Edition on subsequent mentions, both words always capitalized</dd>
     <dt id="firefox-for-android">Firefox for Android</dt>
@@ -76,16 +76,12 @@
     <dd>Firefox Marketplace on first mention, Marketplace is acceptable on subsequent mentions, always capitalized; never “Mozilla Marketplace”</dd>
     <dt id="firefox-nightly">Firefox Nightly</dt>
     <dd>Firefox Nightly on first mention, Nightly on subsequent mentions, always capitalized</dd>
-    <dt id="firefox-os">Firefox OS</dt>
-    <dd>the official name of the project formerly known as Boot to Gecko (or B2G); always use the complete name; do not use “the Firefox OS” unless it is being treated as an adjective (e.g. the Firefox OS experience, the Firefox OS home screen, etc.)</dd>
     <dt id="firefox-themes">Firefox Themes</dt>
     <dd>themes is capitalized when it follows Firefox, lowercase when on its own; it can be singular or plural as needed and is always localized; formerly “Firefox Personas”</dd>
     <dt id="free">free</dt>
     <dd>this one is tricky as it means both “without cost” and “without restrictions” in English, though there are separate words for these concepts in many other languages; please be very clear when using or avoid</dd>
     <dt id="fullscreen">fullscreen</dt>
     <dd>one word, lowercase, when referring to the view mode of the browser; use “entire screen,” “whole screen” or similar formulation in other cases</dd>
-    <dt id="fxos">FxOS</dt>
-    <dd>for internal usage, this is the official abbreviation of “Firefox OS,” but it should not be used in any external communications</dd>
     <dt id="gear">gear</dt>
     <dd>used to refer to any branded merchandise, be it Mozilla, Firefox or any of our other brands; please use instead of “swag” or “merchandise”</dd>
     <dt id="http">http://</dt>
