--- a/media/css/mozorg/about-base.less
+++ b/media/css/mozorg/about-base.less
@@ -75,18 +75,21 @@
         float: right;
         margin-top: -35px;
         margin-bottom: @baseLine;
-        figure video {
+        .moz-video-container video {
             width: 100%;
             height: auto;
             margin:0 auto;
         }
-        figcaption {
+        p {
             margin: 10px 10px @baseLine;
             .font-size(.857em);
             font-style: italic;
         }
         .placeholder-img {
             margin-bottom: @baseLine;
+        }
+        .moz-video-button {
+            background-image: url('/media/img/mozorg/about/poster-i-am.jpg');
         }
     }
 
