--- a/media/css/mozorg/mission.less
+++ b/media/css/mozorg/mission.less
@@ -55,10 +55,13 @@ html[dir="rtl"] #main-content {
   float: right;
   margin-top: -50px;
   margin-bottom: @baseLine;
-  #welcome-video video {
+  .moz-video-container video {
     width: 100%;
     height: auto;
-    margin:0 auto;
+    margin: 0 auto;
+  }
+  .moz-video-button {
+    background-image: url('/media/img/mission/poster-mission.jpg');
   }
   .caption {
     margin: 10px 10px @baseLine;
