--- a/bedrock/mozorg/templates/mozorg/about.html
+++ b/bedrock/mozorg/templates/mozorg/about.html
@@ -26,8 +26,7 @@
 {% endblock %}
 
 {% block js %}
-  {% javascript 'video' %}
-  {% javascript 'mosaic' %}
+  {% javascript 'mosaic_video' %}
 {% endblock %}
 
 {% block mosaic %}
@@ -45,15 +44,16 @@
 
   <div class="video">
     {% if request.locale == 'en-US' %}
-    <figure class="mozilla-video-control mozilla-video-shadow">
-      {{ video('Mozilla_2014_i_am.webm',
-               'Mozilla_2014_i_am.ogv',
-               'Mozilla_2014_i_am.mp4',
-               h=259, w=460,
-               prefix='//videos.cdn.mozilla.net/uploads/mozillaorg/',
-               poster=static('img/mozorg/about/poster-i-am.jpg')) }}
-    </figure>
-    <figcaption>{{ _('The heart of Mozilla is a global community with a shared mission. Watch the video to meet Mozillians from all over the world and all walks of life.') }}</figcaption>
+      <div class="moz-video-container">
+        <button class="moz-video-button" type="button" aria-controls="htmlPlayer">{{ _('Play video') }}</button>
+        {{ video('Mozilla_2014_i_am.webm',
+                 'Mozilla_2014_i_am.ogv',
+                 'Mozilla_2014_i_am.mp4',
+                 h=259, w=460,
+                 prefix='//videos.cdn.mozilla.net/uploads/mozillaorg/',
+                 poster=static('img/mozorg/about/poster-i-am.jpg')) }}
+      </div>
+      <p>{{ _('The heart of Mozilla is a global community with a shared mission. Watch the video to meet Mozillians from all over the world and all walks of life.') }}</p>
     {% else %}
       <img class="placeholder-img" src="{{ static('img/mozorg/about/poster-i-am.jpg') }}" alt="Mozilla">
     {% endif %}
