--- a/bedrock/firefox/templates/firefox/mobile-download.html
+++ b/bedrock/firefox/templates/firefox/mobile-download.html
@@ -50,12 +50,12 @@
       <div class="mobile-download-buttons">
         <ul>
           <li class="android">
-            <a rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}">
+            <a rel="external" href="{{ settings.GOOGLE_PLAY_FIREFOX_LINK }}" data-link-type="download" data-download-os="Android">
               {{ high_res_img('firefox/android/btn-google-play.png', {'alt': _('Get it on Google Play'), 'width': '152', 'height': '45', 'l10n': True}) }}
             </a>
           </li>
           <li class="ios">
-            <a href="{{ firefox_ios_url('mozorg-heartbeat_landing-button') }}">
+            <a href="{{ firefox_ios_url('mozorg-heartbeat_landing-button') }}" data-link-type="download" data-download-os="iOS">
               <img src="{{ l10n_img('firefox/ios/btn-app-store.svg') }}" alt="{{ _('Download on the App Store') }}" width="152" height="45">
             </a>
           </li>
