Fix Bug 1261521 - update sumo link on hello page

--- a/bedrock/firefox/templates/firefox/hello/index.html
+++ b/bedrock/firefox/templates/firefox/hello/index.html
@@ -94,7 +94,7 @@
         <ul>
           <li>{{ _('Collaborate and make decisions in real time') }}</li>
           <li>{{ _('Share what you’re looking at, safely and securely') }}</li>
-          <li>{{ _('Invite friends, <a href="%s">even if they don’t use Firefox</a>')|format('https://support.mozilla.org') }}</li>
+          <li>{{ _('Invite friends, <a href="%s">even if they don’t use Firefox</a>')|format('https://support.mozilla.org/kb/which-browsers-will-work-firefox-hello-video-chat') }}</li>
         </ul>
       </section>
     </div>
